CMAKE_MINIMUM_REQUIRED(VERSION 3.8)
PROJECT(Sysphus3D)
SET(CMAKE_VERBOSE_MAKEFILE ON)
SET(CMAKE_CXX_STANDARD 14)
SET(LIBRARY_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/../Build/Bin/${CMAKE_SYSTEM_NAME})
SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/../Build/Bin/${CMAKE_SYSTEM_NAME})
ADD_DEFINITIONS(-D_CRT_SECURE_NO_WARNINGS)
ADD_DEFINITIONS(-fdeclspec) #编译DirectXMath
ADD_DEFINITIONS(-Wno-ignored-attributes) #编译DirectXMath，屏蔽__fastcall调用约定移除警告
LINK_DIRECTORIES(${LIBRARY_OUTPUT_PATH})
INCLUDE_DIRECTORIES(./)
INCLUDE_DIRECTORIES(../Thirdparty/)
ADD_SUBDIRECTORY(Core)
ADD_SUBDIRECTORY(Math)
ADD_SUBDIRECTORY(Graphics)
ADD_SUBDIRECTORY(Test)