CMAKE_MINIMUM_REQUIRED(VERSION 3.8)
PROJECT(Sysphus3D)
SET(CMAKE_VERBOSE_MAKEFILE ON)
SET(CMAKE_CXX_STANDARD 14)
SET(LIBRARY_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/../Build/Bin/${CMAKE_SYSTEM_NAME})
SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/../Build/Bin/${CMAKE_SYSTEM_NAME})
ADD_DEFINITIONS(-D_CRT_SECURE_NO_WARNINGS)
if(${CMAKE_SYSTEM_NAME} MATCHES "Emscripten")
ADD_DEFINITIONS(-fdeclspec) #±‡“ÎDirectXMath
ADD_DEFINITIONS(-Wno-ignored-attributes) #±‡“ÎDirectXMath£¨∆¡±Œ__fastcallµ˜”√‘º∂®“∆≥˝æØ∏Ê
endif()
LINK_DIRECTORIES(${LIBRARY_OUTPUT_PATH})
if(${CMAKE_SYSTEM_NAME} MATCHES "Emscripten")
LINK_DIRECTORIES(../Thirdparty/Lib/32/)
else()
LINK_DIRECTORIES(../Thirdparty/Lib/64/)
endif()
INCLUDE_DIRECTORIES(./)
INCLUDE_DIRECTORIES(../Thirdparty/)
ADD_SUBDIRECTORY(Core)
ADD_SUBDIRECTORY(Math)
ADD_SUBDIRECTORY(Graphics)
ADD_SUBDIRECTORY(Test)