PROJECT(Graphics)
if(${CMAKE_SYSTEM_NAME} MATCHES "Emscripten")
INCLUDE_DIRECTORIES("$ENV{EMSDK_INC}")
endif()
AUX_SOURCE_DIRECTORY(./Src DIR_SRC)
AUX_SOURCE_DIRECTORY(./Src/OpenGL DIR_SRC)
ADD_DEFINITIONS(-DSE_DLL)
ADD_LIBRARY(Graphics SHARED ${DIR_SRC})
if(${CMAKE_SYSTEM_NAME} MATCHES "Emscripten")
TARGET_LINK_LIBRARIES(Graphics Core)
else()
TARGET_LINK_LIBRARIES(Graphics Core glew32 opengl32)
endif()